@@ -17,6 +17,7 @@ next
 -augustus2bsml.pl: added 2.3.1 to version map
 -glimmer3: added support for single input files
 -prok_pipeline: replaced the single version of the prok pipeline with two new versions (one with database loading and one without)
+-ncbi-blastall: new component
 
 ergatis-v2r12b1
 ----
